# Jackal-ORCA

./: .gitignore  PROTON_TROUBLESHOOTING.md  README.md  SETUP.md  apriltag.yaml  apriltag_cam.py  apriltag_file_test.py  automatic_driving_normal_status  claude.md  goal_manager_node.py  pure_pursuit_node.py  pure_pursuit_node_V2.py  slam_apriltag_planner  start.md  yolo_cam.py
apriltag_print/: make_print_pdf.py
maps/: jackal_lab.pgm  jackal_lab.yaml
models/apriltag_board/: model.config  model.sdf
models/apriltag_board/meshes/: tag_plane.mtl
reference/: README.md  mission_node.py
scripts/: bt_classicbonded_fix.sh  bt_dualsense_connect.sh  bt_dualsense_daemon.sh  bt_dualsense_fix.sh  bt_speaker_connect.sh  jackal_newrun.sh  scan_selfcheck.py  start_explore.sh  stop_explore.sh  view_map.sh  view_tags.py
src/: PARAMETERS.md  README.md
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: MissionState.msg  TagCandidate.msg  TagPose.msg  TagPoseArray.msg
src/jackal_msgs/: CMakeLists.txt  package.xml
src/jackal_orca_bringup/: CMakeLists.txt  package.xml
src/jackal_orca_bringup/launch/: bringup_all.launch.py  bringup_all.launch.py.bak
src/jackal_orca_bringup/rviz/: bringup_all.rviz
src/jackal_orca_core/: CMakeLists.txt  package.xml
src/jackal_orca_description/: CMakeLists.txt  package.xml
src/jackal_orca_navigation/: CMakeLists.txt  package.xml
src/jackal_orca_perception/: CMakeLists.txt  README.md  package.xml
src/jackal_orca_perception/config/: apriltag.yaml
src/jackal_orca_perception/docs/: yolo_apriltag_topics.md
src/jackal_orca_perception/launch/: apriltag_pipeline.launch.py  depth_detector.launch.py  depth_detector.launch.py.bak  lidar_detector.launch.py  yolo_web_monitor.launch.py
src/jackal_orca_perception/scripts/: dataset_collector_node.py  depth_object_detector.py  lidar_obstacle_detector.py  tag_recorder_node.py  tag_yolo_detector_node.py
src/jackal_orca_perception/scripts/dev_tools/: export_trt.py  front_cam_web.py  prepare_dataset.py  train_yolo.py
src/roas2_bringup/: CMakeLists.txt  package.xml  robot.yaml
src/roas2_bringup/config/: control.yaml  diagnostic_aggregator.yaml  diagnostic_updater.yaml  foxglove_bridge.yaml  imu_filter.yaml  teleop_interactive_markers.yaml  teleop_joy.yaml  teleop_ps5.yaml  twist_mux.yaml
src/roas2_bringup/launch/: jackal.launch.py  model.launch.py  platform.launch.py  view_robot.launch.py
src/roas2_bringup/rules/: 10-jackal.rules  20-microstrain.rules  30-gps.rules
src/roas2_bringup/rviz/: view.rviz  view_robot.rviz
src/roas2_bringup/scripts/: tf_merge.py
src/roas2_bringup/systemd/: jackal  jackal.service
src/tag_hotspot_nav/: ARCHITECTURE.md  package.xml  setup.cfg  setup.py
src/tag_hotspot_nav/config/: pointcloud_to_laserscan_params.yaml  slam_toolbox_params.yaml
src/tag_hotspot_nav/launch/: explore.launch.py  perception.launch.py  slam_2d.launch.py
src/tag_hotspot_nav/scripts/: debug_door.py  debug_frontier.py  debug_map_ascii.py  debug_planner.py  finish_exploration_now.sh  finish_mission.py  finish_mission_listener.py  go  pause  reset  resume  save
src/tag_hotspot_nav/tag_hotspot_nav/: cliff_stop.py  clustering.py  explore_cmd.py  footprint_marker.py  frontier_detection.py  frontier_explorer.py  grid_utils.py  hotspot_navigator.py  joy_estop.py  map_cleaner.py  path_planner.py  pure_pursuit.py  safety_layer.py  sound_player.py  stuck_detector.py  tag_centering.py  tag_collector.py
tags/apriltag_board/: model.config  model.sdf
tutorials/clearpath_simulator/: README.md
tutorials/livox_tutorial/: README.md
yolo_train_kit/: README.md
(+17 files in other folders)
